test-files/cmd/quick/BadJavaScriptTranslation.sh.stdout
11:49:25.827 STATUS ...pp/hoot/core/util/Progress.cpp(  86) Convert (0%): Converting ...les/jakarta_raya_coastline.shp to ...k/BadJavaScriptTranslation.osm...
11:49:25.833 STATUS ...pp/hoot/core/util/Progress.cpp(  86) Convert (0%): Loading maps: ...les/jakarta_raya_coastline.shp...
Initialize works!
11:49:25.861 ERROR  ...JavaScriptSchemaTranslator.cpp( 309) Error initializing JavaScript: Function call 'initialize' returned an error.
11:49:26.410 STATUS ...pp/hoot/core/util/Progress.cpp(  86) Convert (0%): Converting ...les/jakarta_raya_coastline.shp to ...k/BadJavaScriptTranslation.osm...
11:49:26.416 STATUS ...pp/hoot/core/util/Progress.cpp(  86) Convert (0%): Loading maps: ...les/jakarta_raya_coastline.shp...
11:49:26.439 ERROR  ...JavaScriptSchemaTranslator.cpp( 309) Error initializing JavaScript: undefined:4: SyntaxError: Unexpected identifier
foo is bad.
    ^^
SyntaxError: Unexpected identifier
11:49:26.969 STATUS ...pp/hoot/core/util/Progress.cpp(  86) Convert (0%): Converting ...les/jakarta_raya_coastline.shp to ...k/BadJavaScriptTranslation.osm...
11:49:26.975 STATUS ...pp/hoot/core/util/Progress.cpp(  86) Convert (0%): Loading maps: ...les/jakarta_raya_coastline.shp...
11:49:27.009 ERROR  ...JavaScriptSchemaTranslator.cpp( 309) Error initializing JavaScript: undefined:4: SyntaxError: Unexpected identifier
foo is bad.
    ^^
SyntaxError: Unexpected identifier
    at <anonymous>:32:6
